# chained_notes

./: .dockerignore  .env.example  .gitignore  .pylintrc  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: check-code.yml  dev-docker-image.yml  notify-openapi-clients-of-changes.yml  update-openapi-schema.yml
chained_notes/: asgi.py  settings.py  wsgi.py
chained_notes/adapters/database/admin/: __init__.py  note_admin.py
chained_notes/adapters/database/migrations/: 0001_initial.py
chained_notes/adapters/database/models/: __init__.py  note_model.py
chained_notes/infrastructure/api/schemas/: openapi-schema.yml
chained_notes/interfaces/api/serializers/: __init__.py  note_serializer.py
chained_notes/interfaces/api/urls/: __init__.py  note_url.py  router.py
chained_notes/interfaces/api/views/: __init__.py  note_view.py
config/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: nginx.conf
