[tool.poetry]
name = "chained-notes"
version = "0.1.0"
description = "An application for chained notes."
authors = []
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.1"
django-environ = "^0.11.2"
djangorestframework = "^3.14.0"
psycopg = "^3.1.17"
psycopg-binary = "^3.1.17"
djangorestframework-simplejwt = "^5.3.1"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.349"
django-types = "^0.19.1"
djangorestframework-types = "^0.8.0"
ruff = "^0.4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
