[tool.poetry]
name = "chained-notes"
version = "0.1.0"
description = "An application for chained notes."
authors = []
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1"
django-environ = "^0.12.0"
djangorestframework = "^3.15.2"
psycopg = "^3.2.1"
psycopg-binary = "^3.2.1"
djangorestframework-simplejwt = "^5.3.1"
drf-spectacular = "^0.28.0"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.377"
django-types = "^0.22.0"
djangorestframework-types = "^0.9.0"
ruff = "^0.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
